<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.teletha</groupId>
	<artifactId>sinobu</artifactId>
	<version>2.2.0</version>
	<packaging>jar</packaging>
	<name>sinobu</name>
	<description>Sinobu is not obsolete framework but utility, which can manipulate objects as a extremely-condensed facade.</description>
	<dependencies>
		<dependency>
			<groupId>com.pgs-soft</groupId>
			<artifactId>HttpClientMock</artifactId>
			<version>1.0.0</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>antibug</artifactId>
			<version>1.0.0</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>1.2.75</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.6</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.12.2</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>io.reactivex.rxjava3</groupId>
			<artifactId>rxjava</artifactId>
			<version>3.0.11</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
	</dependencies>
	<licenses>
		<license>
			<name>The MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>
	<repositories>
		<repository>
			<id>Maven</id>
			<name>repo1.maven.org</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>JitPack</id>
			<name>jitpack.io</name>
			<url>https://jitpack.io/</url>
		</repository>
	</repositories>
	<url>https://github.com/teletha/sinobu</url>
	<scm>
		<url>https://github.com/teletha/sinobu</url>
		<connection>scm:git:https://github.com/teletha/sinobu.git</connection>
		<developerConnection>scm:git:https://github.com/teletha/sinobu.git</developerConnection>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/teletha/sinobu/issues</url>
	</issueManagement>
	<developers/>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<compilerId>eclipse</compilerId>
					<source>15</source>
					<target>15</target>
					<encoding>UTF-8</encoding>
					<compilerArgs>
						<arg>-proc:none</arg>
					</compilerArgs>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.codehaus.plexus</groupId>
						<artifactId>plexus-compiler-eclipse</artifactId>
						<version>2.8.8</version>
					</dependency>
					<dependency>
						<groupId>org.eclipse.jdt</groupId>
						<artifactId>ecj</artifactId>
						<version>3.25.0</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>